--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<meta charset="UTF-8" />
+<meta charset="UTF-8">
 <title>🎄 平安夜快乐</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
 html,body{
   margin:0;
   padding:0;
+  height:100%;
   background:linear-gradient(180deg,#ff9a9e,#fad0c4);
   overflow:hidden;
   font-family:"PingFang SC","Microsoft YaHei",sans-serif;
@@ -20,16 +21,23 @@ html,body{
   width:100%;
   text-align:center;
   color:#fff;
-  font-size:18px;
+  font-size:20px;
   z-index:10;
 }
 
-video{display:none}
+video{
+  position:fixed;
+  inset:0;
+  width:100%;
+  height:100%;
+  object-fit:cover;
+  opacity:0.25;
+}
 
 .heart{
   position:absolute;
-  font-size:22px;
-  animation:fly 1.4s ease-out forwards;
+  font-size:26px;
+  animation:fly 1.5s ease-out forwards;
   pointer-events:none;
 }
 
@@ -42,7 +50,7 @@ video{display:none}
         calc(var(--x) * 1px),
         calc(var(--y) * 1px)
       )
-      scale(1.4)
+      scale(1.6)
       rotate(360deg);
   }
 }
@@ -50,62 +58,41 @@ video{display:none}
 </head>
 
 <body>
-<div id="tip">👇 点一下屏幕，允许摄像头</div>
 
-<video id="video" playsinline></video>
-<canvas id="canvas" width="80" height="60"></canvas>
+<div id="tip">👇 点一下屏幕</div>
+<video id="video" playsinline autoplay muted></video>
 
 <script>
-const video = document.getElementById("video");
-const canvas = document.getElementById("canvas");
-const ctx = canvas.getContext("2d");
 const tip = document.getElementById("tip");
-
-let lastFrame = null;
+const video = document.getElementById("video");
 let started = false;
 
-function createHearts(){
-  for(let i=0;i<12;i++){
+function hearts(){
+  for(let i=0;i<18;i++){
     const h=document.createElement("div");
     h.className="heart";
     h.innerText="💖";
-    h.style.left=Math.random()*window.innerWidth+"px";
-    h.style.top=Math.random()*window.innerHeight+"px";
-    h.style.setProperty("--x",Math.random()*200-100);
-    h.style.setProperty("--y",Math.random()*200-100);
+    h.style.left=Math.random()*innerWidth+"px";
+    h.style.top=Math.random()*innerHeight+"px";
+    h.style.setProperty("--x",Math.random()*240-120);
+    h.style.setProperty("--y",Math.random()*240-120);
     document.body.appendChild(h);
-    setTimeout(()=>h.remove(),1400);
+    setTimeout(()=>h.remove(),1500);
   }
 }
 
-function detectMotion(){
-  ctx.drawImage(video,0,0,canvas.width,canvas.height);
-  const frame = ctx.getImageData(0,0,canvas.width,canvas.height).data;
-
-  if(lastFrame){
-    let diff = 0;
-    for(let i=0;i<frame.length;i+=16){
-      diff += Math.abs(frame[i] - lastFrame[i]);
-    }
-    if(diff > 1200){
-      tip.innerText = "🎄 平安夜快乐 ✨";
-      createHearts();
-    }
-  }
-  lastFrame = frame;
-  requestAnimationFrame(detectMotion);
-}
-
-async function startCamera(){
+async function start(){
   try{
     const stream = await navigator.mediaDevices.getUserMedia({
       video:{facingMode:"user"},
       audio:false
     });
     video.srcObject = stream;
-    await video.play();
-    tip.innerText="✋ 把手放到镜头前试试";
-    detectMotion();
+
+    // ⚠️ 不做任何帧处理
+    tip.innerText = "🎄 平安夜快乐 ✨";
+    hearts();
+
   }catch(e){
     alert("摄像头启动失败");
   }
@@ -113,9 +100,10 @@ async function startCamera(){
 
 document.body.addEventListener("click",()=>{
   if(started) return;
-  started=true;
-  startCamera();
+  started = true;
+  start();
 });
 </script>
+
 </body>
 </html>
