--- a/index.html
+++ b/index.html
@@ -2,106 +2,311 @@
 <html lang="zh-CN">
 <head>
 <meta charset="UTF-8">
-<title>🎄 平安夜快乐</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>平安夜快乐 🎄</title>
 
 <style>
-html,body{
-  margin:0;
-  padding:0;
-  height:100%;
-  background:linear-gradient(180deg,#ff9a9e,#fad0c4);
-  overflow:hidden;
-  font-family:"PingFang SC","Microsoft YaHei",sans-serif;
+html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    overflow: hidden;
+    font-family: "PingFang SC", "Microsoft YaHei", sans-serif;
 }
 
-#tip{
-  position:fixed;
-  top:20px;
-  width:100%;
-  text-align:center;
-  color:#fff;
-  font-size:20px;
-  z-index:10;
+/* 背景 */
+body {
+    background: linear-gradient(180deg, #ff9a9e, #fad0c4);
+    color: #fff;
 }
 
-video{
-  position:fixed;
-  inset:0;
-  width:100%;
-  height:100%;
-  object-fit:cover;
-  opacity:0.25;
+/* 背景柔光呼吸 */
+body::after {
+    content: "";
+    position: fixed;
+    inset: 0;
+    background: radial-gradient(circle at center,
+        rgba(255,255,255,0.18),
+        rgba(255,255,255,0) 60%);
+    animation: glow 6s ease-in-out infinite;
+    pointer-events: none;
 }
 
-.heart{
-  position:absolute;
-  font-size:26px;
-  animation:fly 1.5s ease-out forwards;
-  pointer-events:none;
+@keyframes glow {
+    0%,100% { opacity: .4; }
+    50% { opacity: .7; }
 }
 
-@keyframes fly{
-  from{opacity:1;transform:scale(.6)}
-  to{
-    opacity:0;
-    transform:
-      translate(
-        calc(var(--x) * 1px),
-        calc(var(--y) * 1px)
-      )
-      scale(1.6)
-      rotate(360deg);
-  }
+/* 巨型圣诞树 */
+.bg-tree {
+    position: absolute;
+    bottom: -40px;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 320px;
+    opacity: 0.28;
+    animation: treeMove 6s ease-in-out infinite;
+    pointer-events: none;
+}
+
+@keyframes treeMove {
+    0%,100% { transform: translateX(-50%) scale(1); }
+    50% { transform: translateX(-50%) scale(1.06); }
+}
+
+/* 星星 */
+.star {
+    position: absolute;
+    bottom: 360px;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 48px;
+    animation: starGlow 2.5s ease-in-out infinite;
+}
+
+@keyframes starGlow {
+    0%,100% { opacity: 0.6; transform: translateX(-50%) scale(1); }
+    50% { opacity: 1; transform: translateX(-50%) scale(1.25); }
+}
+
+/* 主卡片 */
+.card {
+    position: relative;
+    z-index: 10;
+    width: 88%;
+    max-width: 360px;
+    margin: auto;
+    top: 50%;
+    transform: translateY(-50%);
+    text-align: center;
+    padding: 30px 22px;
+    background: transparent;
+    border-radius: 22px;
+    box-shadow: none;
+    backdrop-filter: none;
+    animation: float 4s ease-in-out infinite;
+}
+
+@keyframes float {
+    0%,100% { transform: translateY(-50%) translateY(0); }
+    50% { transform: translateY(-50%) translateY(-14px); }
+}
+
+h1 {
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+
+/* 名字：心跳感 */
+.name {
+    font-size: 20px;
+    margin-bottom: 6px;
+    animation: heartbeat 2.4s infinite;
+}
+
+@keyframes heartbeat {
+    0%,100% {
+        transform: scale(1);
+        text-shadow: 0 0 6px rgba(255,255,255,.4);
+    }
+    50% {
+        transform: scale(1.08);
+        text-shadow: 0 0 16px rgba(255,255,255,.9);
+    }
+}
+
+/* 情话 */
+.message {
+    position: absolute;
+    font-size: 16px;
+    white-space: nowrap;
+    animation: rise 3s ease-out forwards;
+    pointer-events: none;
+}
+
+@keyframes rise {
+    0% { opacity: 0; transform: translateY(10px) scale(0.95); }
+    25% { opacity: 1; }
+    100% { opacity: 0; transform: translateY(-140px) scale(1.08); }
+}
+
+/* 爱心爆炸 */
+.heart-burst {
+    position: absolute;
+    font-size: 20px;
+    animation: burst 1.3s ease-out forwards;
+    pointer-events: none;
+}
+
+@keyframes burst {
+    0% { transform: scale(0.3); opacity: 1; }
+    100% {
+        transform: translate(var(--x), var(--y)) scale(1.4) rotate(360deg);
+        opacity: 0;
+    }
+}
+
+/* 星光粒子 */
+.spark {
+    position: absolute;
+    font-size: 12px;
+    opacity: .8;
+    animation: sparkFly 1.6s linear forwards;
+    pointer-events: none;
+}
+
+@keyframes sparkFly {
+    to {
+        transform: translate(var(--sx), var(--sy));
+        opacity: 0;
+    }
+}
+
+/* 雪 */
+.snow {
+    position: absolute;
+    top: -10px;
+    font-size: 14px;
+    animation: snowFall linear infinite;
+}
+
+@keyframes snowFall {
+    to { transform: translateY(110vh); }
+}
+
+/* 摄像头 canvas */
+#videoCanvas {
+    display:none;
 }
 </style>
 </head>
 
 <body>
 
-<div id="tip">👇 点一下屏幕</div>
+<div class="bg-tree">🎄</div>
+<div class="star">⭐</div>
+
+<div class="card">
+    <h1>平安夜快乐</h1>
+    <div class="name">To 小左 💕</div>
+</div>
+
+<audio id="bgm" loop>
+    <source src="https://cdn.pixabay.com/audio/2022/12/05/audio_5a7c3f9db8.mp3">
+</audio>
+
 <video id="video" playsinline autoplay muted></video>
+<canvas id="videoCanvas" width="80" height="60"></canvas>
 
 <script>
-const tip = document.getElementById("tip");
+const messages = [
+    "小左，我好像越来越离不开你了",
+    "靠你近一点，心就乱一点 💗",
+    "如果可以，我想一直这样陪着你",
+    "你在的时候，我什么都不想要",
+    "今晚有点甜，大概是你在我心里",
+    "我好像开始习惯你了",
+    "平安夜，只想被你抱紧",
+    "小左，你能不能别走"
+];
+
 const video = document.getElementById("video");
-let started = false;
+const canvas = document.getElementById("videoCanvas");
+const ctx = canvas.getContext("2d");
+let lastFrame = null;
+let gestureCooldown = false;
 
-function hearts(){
-  for(let i=0;i<18;i++){
-    const h=document.createElement("div");
-    h.className="heart";
-    h.innerText="💖";
-    h.style.left=Math.random()*innerWidth+"px";
-    h.style.top=Math.random()*innerHeight+"px";
-    h.style.setProperty("--x",Math.random()*240-120);
-    h.style.setProperty("--y",Math.random()*240-120);
-    document.body.appendChild(h);
-    setTimeout(()=>h.remove(),1500);
-  }
+// 触发页面特效
+function triggerEffects(x = window.innerWidth/2, y = window.innerHeight/2){
+    const bgm = document.getElementById("bgm");
+    if (bgm.paused) bgm.play();
+
+    // 情话
+    const msg = document.createElement("div");
+    msg.className = "message";
+    msg.innerText = messages[Math.floor(Math.random()*messages.length)];
+    msg.style.left = x + "px";
+    msg.style.top = y + "px";
+    document.body.appendChild(msg);
+    setTimeout(()=>msg.remove(),3000);
+
+    // 爱心
+    for(let i=0;i<14;i++){
+        const h=document.createElement("div");
+        h.className="heart-burst";
+        h.innerText="💖";
+        h.style.left=x+"px";
+        h.style.top=y+"px";
+        h.style.setProperty("--x",(Math.random()*180-90)+"px");
+        h.style.setProperty("--y",(Math.random()*180-90)+"px");
+        document.body.appendChild(h);
+        setTimeout(()=>h.remove(),1300);
+    }
+
+    // 星光
+    for(let i=0;i<8;i++){
+        const s=document.createElement("div");
+        s.className="spark";
+        s.innerText="✨";
+        s.style.left=x+"px";
+        s.style.top=y+"px";
+        s.style.setProperty("--sx",(Math.random()*120-60)+"px");
+        s.style.setProperty("--sy",(Math.random()*120-60)+"px");
+        document.body.appendChild(s);
+        setTimeout(()=>s.remove(),1600);
+    }
 }
 
-async function start(){
-  try{
-    const stream = await navigator.mediaDevices.getUserMedia({
-      video:{facingMode:"user"},
-      audio:false
-    });
-    video.srcObject = stream;
+// 雪花
+setInterval(()=>{
+    const snow=document.createElement("div");
+    snow.className="snow";
+    snow.innerText="❄️";
+    snow.style.left=Math.random()*window.innerWidth+"px";
+    snow.style.fontSize=(Math.random()*10+10)+"px";
+    snow.style.animationDuration=(Math.random()*5+5)+"s";
+    document.body.appendChild(snow);
+    setTimeout(()=>snow.remove(),10000);
+},350);
 
-    // ⚠️ 不做任何帧处理
-    tip.innerText = "🎄 平安夜快乐 ✨";
-    hearts();
+// 点击触发
+document.addEventListener("click", e => {
+    triggerEffects(e.clientX, e.clientY);
+});
 
-  }catch(e){
-    alert("摄像头启动失败");
-  }
+// 手势检测（靠近摄像头）
+async function startCamera(){
+    try{
+        const stream = await navigator.mediaDevices.getUserMedia({video:{facingMode:"user"}, audio:false});
+        video.srcObject = stream;
+        await video.play();
+
+        function detectMotion(){
+            ctx.drawImage(video,0,0,canvas.width,canvas.height);
+            const frame = ctx.getImageData(0,0,canvas.width,canvas.height).data;
+            if(lastFrame && !gestureCooldown){
+                let diff = 0;
+                for(let i=0;i<frame.length;i+=16){
+                    diff += Math.abs(frame[i] - lastFrame[i]);
+                }
+                if(diff > 1200){
+                    triggerEffects();
+                    gestureCooldown = true;
+                    setTimeout(()=>gestureCooldown=false,1200); // 冷却，防止重复触发
+                }
+            }
+            lastFrame = frame;
+            requestAnimationFrame(detectMotion);
+        }
+        detectMotion();
+    }catch(e){
+        console.warn("摄像头启动失败", e);
+    }
 }
 
+// 用户必须点击一次才能启动摄像头
 document.body.addEventListener("click",()=>{
-  if(started) return;
-  started = true;
-  start();
+    startCamera();
 });
 </script>
 
