--- a/index.html
+++ b/index.html
@@ -12,10 +12,6 @@ html, body {
     height: 100%;
     overflow: hidden;
     font-family: "PingFang SC", "Microsoft YaHei", sans-serif;
-}
-
-/* 背景 */
-body {
     background: linear-gradient(180deg, #ff9a9e, #fad0c4);
     color: #fff;
 }
@@ -174,11 +170,20 @@ h1 {
     to { transform: translateY(110vh); }
 }
 
+/* 摄像头提示 */
+#tip{
+    position: fixed;
+    top: 20px;
+    width: 100%;
+    text-align: center;
+    font-size: 18px;
+    color: #fff;
+    z-index: 20;
+}
 </style>
 </head>
 
 <body>
-
 <div class="bg-tree">🎄</div>
 <div class="star">⭐</div>
 
@@ -187,14 +192,14 @@ h1 {
     <div class="name">To 小左 💕</div>
 </div>
 
+<div id="tip">👇 点一下屏幕启动手势交互</div>
+
 <audio id="bgm" loop>
     <source src="https://cdn.pixabay.com/audio/2022/12/05/audio_5a7c3f9db8.mp3">
 </audio>
 
-<!-- 手势摄像头 -->
-<video id="handVideo" playsinline autoplay muted style="display:none;"></video>
-
 <script>
+// ---------------- 原点击动画 ----------------
 const messages = [
     "小左，我好像越来越离不开你了",
     "靠你近一点，心就乱一点 💗",
@@ -206,16 +211,11 @@ const messages = [
     "小左，你能不能别走"
 ];
 
-const handVideo = document.getElementById("handVideo");
-let lastFrame = null;
-let handDetectionStarted = false;
-
-// 点击播放音乐+启动手势
 document.addEventListener("click", e => {
     const bgm = document.getElementById("bgm");
     if (bgm.paused) bgm.play();
 
-    // 原来的点击效果
+    // 情话
     const msg = document.createElement("div");
     msg.className = "message";
     msg.innerText = messages[Math.floor(Math.random()*messages.length)];
@@ -224,6 +224,7 @@ document.addEventListener("click", e => {
     document.body.appendChild(msg);
     setTimeout(()=>msg.remove(),3000);
 
+    // 爱心
     for(let i=0;i<14;i++){
         const h=document.createElement("div");
         h.className="heart-burst";
@@ -236,6 +237,7 @@ document.addEventListener("click", e => {
         setTimeout(()=>h.remove(),1300);
     }
 
+    // 星光
     for(let i=0;i<8;i++){
         const s=document.createElement("div");
         s.className="spark";
@@ -246,11 +248,6 @@ document.addEventListener("click", e => {
         s.style.setProperty("--sy",(Math.random()*120-60)+"px");
         document.body.appendChild(s);
         setTimeout(()=>s.remove(),1600);
-    }
-
-    // 启动手势检测一次
-    if(!handDetectionStarted){
-        startHandDetection();
     }
 });
 
@@ -266,68 +263,88 @@ setInterval(()=>{
     setTimeout(()=>snow.remove(),10000);
 },350);
 
-// 手势检测
-async function startHandDetection() {
-    try{
-        const stream = await navigator.mediaDevices.getUserMedia({video:{facingMode:"user"},audio:false});
-        handVideo.srcObject = stream;
-        await handVideo.play();
-        handDetectionStarted = true;
-        detectHandLoop();
-    } catch(e){
-        console.error("手势摄像头启动失败", e);
-    }
-}
+// ---------------- 手势交互 ----------------
+const video = document.createElement('video');
+video.autoplay = true;
+video.playsInline = true;
 
-function detectHandLoop() {
-    if (!handDetectionStarted) return;
-    const tmpCanvas = document.createElement("canvas");
-    const tmpCtx = tmpCanvas.getContext("2d");
-    tmpCanvas.width = 80;
-    tmpCanvas.height = 60;
+const gestureCanvas = document.createElement('canvas');
+const gestureCtx = gestureCanvas.getContext('2d');
+gestureCanvas.width = 80;
+gestureCanvas.height = 60;
 
-    function loop(){
-        tmpCtx.drawImage(handVideo,0,0,tmpCanvas.width,tmpCanvas.height);
-        const frame = tmpCtx.getImageData(0,0,tmpCanvas.width,tmpCanvas.height).data;
+let gestureCooldown = false;
 
-        if(lastFrame){
-            let diff = 0;
-            for(let i=0;i<frame.length;i+=4){
-                diff += Math.abs(frame[i]-lastFrame[i]);
-            }
-            if(diff > 1500){
-                triggerHandEffect();
-            }
-        }
-        lastFrame = frame;
-        requestAnimationFrame(loop);
-    }
-    loop();
-}
-
-// 手势触发效果
-function triggerHandEffect(){
-    const msg = document.createElement("div");
-    msg.className = "message";
-    msg.innerText = messages[Math.floor(Math.random()*messages.length)];
-    msg.style.left = (window.innerWidth/2 + (Math.random()*60-30)) + "px";
-    msg.style.top = (window.innerHeight/2 + (Math.random()*60-30)) + "px";
-    document.body.appendChild(msg);
-    setTimeout(()=>msg.remove(),3000);
-
-    for(let i=0;i<14;i++){
+function createHearts(){
+    for(let i=0;i<12;i++){
         const h=document.createElement("div");
         h.className="heart-burst";
         h.innerText="💖";
-        h.style.left = (window.innerWidth/2 + (Math.random()*60-30)) + "px";
-        h.style.top = (window.innerHeight/2 + (Math.random()*60-30)) + "px";
-        h.style.setProperty("--x",(Math.random()*180-90)+"px");
-        h.style.setProperty("--y",(Math.random()*180-90)+"px");
+        h.style.left=Math.random()*window.innerWidth+"px";
+        h.style.top=Math.random()*window.innerHeight+"px";
+        h.style.setProperty("--x",Math.random()*200-100);
+        h.style.setProperty("--y",Math.random()*200-100);
         document.body.appendChild(h);
-        setTimeout(()=>h.remove(),1300);
+        setTimeout(()=>h.remove(),1400);
     }
 }
-</script>
 
+function createSparks(){
+    for(let i=0;i<10;i++){
+        const s=document.createElement("div");
+        s.className="spark";
+        s.innerText="✨";
+        s.style.left=Math.random()*window.innerWidth+"px";
+        s.style.top=Math.random()*window.innerHeight+"px";
+        s.style.setProperty("--sx",Math.random()*120-60);
+        s.style.setProperty("--sy",Math.random()*120-60);
+        document.body.appendChild(s);
+        setTimeout(()=>s.remove(),1600);
+    }
+}
+
+// 手势检测（简单亮度变化）
+function detectHandGesture(){
+    gestureCtx.drawImage(video, 0,0,gestureCanvas.width,gestureCanvas.height);
+    const frame = gestureCtx.getImageData(0,0,gestureCanvas.width,gestureCanvas.height).data;
+
+    let sum = 0;
+    for(let i=0;i<frame.length;i+=4){ sum += frame[i]; }
+    const avg = sum / (gestureCanvas.width*gestureCanvas.height);
+
+    if(!gestureCooldown){
+        if(avg < 50){ // 张开手掌
+            createHearts();
+            gestureCooldown = true;
+            setTimeout(()=>gestureCooldown=false,1200);
+        } else if(avg > 180){ // 握拳
+            createSparks();
+            gestureCooldown = true;
+            setTimeout(()=>gestureCooldown=false,1200);
+        }
+    }
+
+    requestAnimationFrame(detectHandGesture);
+}
+
+// 启动摄像头
+async function startCamera(){
+    try{
+        const stream = await navigator.mediaDevices.getUserMedia({video:{facingMode:"user"}});
+        video.srcObject = stream;
+        await video.play();
+        document.getElementById('tip').innerText="✋ 把手放到摄像头前试试";
+        detectHandGesture();
+    }catch(e){
+        alert("摄像头启动失败");
+        console.error(e);
+    }
+}
+
+// 用户点击启动手势
+document.body.addEventListener("click",()=>{
+    startCamera();
+}, {once:true});
+</script>
 </body>
 </html>
